using System.Collections;
using System.Collections.Generic;
using UnityEngine;


public class Constant 
{ 

    //trigger animation
    public const string IDLE = "idle";
    public const string RUN = "run";
    public const string ATTACK = "attack";
    public const string DEAD = "dead";
    public const string DANCE = "dance";

    //tag
    public const string TAG_CHARACTER = "character";
    public const string TAG_RANGE_ATTACK = "rangeAttack";

    //layer
    public const string LAYER_CHARACTER = "Character";

    //team of player and enemy
    public const string PLAYER_TEAM = "playTeam";
    public const string ENEMY_TEAM = "enemyTeam";

    //PlayPrefs
    public const int DEFAULT_COIN = 100;
    public const string COIN_KEY = "Coin";
    public const string LIST_STATUS_WP_KEY = "ListStatusWp";
    public const string LIST_STATUS_HEAD_KEY = "ListStatusHead";
    public const string LIST_STATUS_PANT_KEY = "ListStatusPant";
    public const string LIST_STATUS_SKIN_KEY = "ListStatusSkin";
}
